# hee-rs

./: .gitignore  .travis.yml  COMMIT_CONVENTION.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
conf/: app.toml
hee-core/: Cargo.toml
hee-core/src/: log.rs
hee-core/src/config/: config.rs  log_level.rs  mod.rs
hee-uaa/: Cargo.toml
hee-uaa/src/: main.rs  uaa.rs
scripts/git-hooks/: commit-msg  pre-commit  pre-push
