[package]
name = "hee-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Dokuro-YH/hee-rs"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
