[package]
name = "hee-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Dokuro-YH/hee-rs"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.9.4", features = ["env", "toml"]}
yansi = "0.5"

# tracing
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }

[dev-dependencies]
figment = { version = "0.9.4", features = ["test"] }